--- a/single-repo.html
+++ b/single-repo.html
@@ -23,11 +23,11 @@
   
   <main>
     <div id="issues-container" class="list-group">
-      
+
     </div>
   
   </main>
-
+  <script src="./assets/single.js"></script>
 </body>
 
 </html>
